# NNContextSentiment

./: CMakeLists.txt  GRHSWordDetector.cpp  GRHSWordDetector.h  GRHWordDetector.cpp  GRHWordDetector.h  GRWordDetector.cpp  GRWordDetector.h  HSWordDetector.cpp  HSWordDetector.h  HWordDetector.cpp  HWordDetector.h  Options.h  README.md  RHSWordDetector.cpp  RHSWordDetector.h  RHWordDetector.cpp  RHWordDetector.h  RWordDetector.cpp  RWordDetector.h  SparseDetector.cpp  SparseDetector.h  WordDetector.cpp  WordDetector.h
basic/: CNNHSWordClassifier.h  CNNHWordClassifier.h  CNNWordClassifier.h  Example.h  Feature.h  GRCNNHSWordClassifier.h  GRCNNHWordClassifier.h  GRCNNWordClassifier.h  Instance.h  InstanceReader.h  InstanceWriter.h  Pipe.h  RCNNHSWordClassifier.h  RCNNHWordClassifier.h  RCNNWordClassifier.h  SparseClassifier.h
